option('sweet-server',
  type: 'boolean',
  value: false,
  description: 'Enable sweet protocol'
)

option('sdl',
  type: 'boolean',
  value: false,
  description: 'Enable SDL GUI'
)

option('gtk',
  type: 'boolean',
  value: false,
  description: 'Enable GTK GUI'
)

option('qxl',
  type: 'boolean',
  value: true,
  description: 'Enable QXL device'
)

option('vgpu',
  type: 'boolean',
  value: false,
  description: 'Enable VGPU device'
)

