mvisor_sources += files(
  'ahci_cdrom.cc',
  'ahci_disk.cc',
  'ahci_host.cc',
  'ahci_host.h',
  'ahci_internal.h',
  'ahci_port.cc',
  'ahci_port.h',
  'ata_internal.h',
  'cdrom_toc.cc',
  'ide_storage.cc',
  'ide_storage.h'
)

proto_sources += proto_gen.process(
  'ahci_cdrom.proto',
  'ahci_host.proto'
)
